AI-JADEDEVS4/src/objects/Trial_Server_URL__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Endpoint__c</fullName>
        <label>Endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Input_Email__c</fullName>
        <label>Input Email</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Input_Password__c</fullName>
        <label>Input Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Trial Server URL</label>
</CustomObject>